[gd_scene load_steps=3 format=3 uid="uid://main_menu_001"]

[ext_resource type="Script" path="res://scripts/ui/main_menu.gd" id="1_menu"]
[ext_resource type="Theme" uid="uid://game_theme_001" path="res://resources/themes/game_theme.tres" id="2_theme"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_theme")
script = ExtResource("1_menu")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.12, 0.1, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="TitleContainer" type="VBoxContainer" parent="CenterContainer/VBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TitleLabel" type="Label" parent="CenterContainer/VBox/TitleContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.949, 0.761, 0.341, 1)
theme_override_font_sizes/font_size = 72
text = "GoDig"
horizontal_alignment = 1

[node name="SubtitleLabel" type="Label" parent="CenterContainer/VBox/TitleContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.65, 0.6, 1)
theme_override_font_sizes/font_size = 20
text = "A Mining Adventure"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="CenterContainer/VBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="ButtonContainer" type="VBoxContainer" parent="CenterContainer/VBox"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme_override_constants/separation = 20

[node name="NewGameButton" type="Button" parent="CenterContainer/VBox/ButtonContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "New Game"

[node name="ContinueButton" type="Button" parent="CenterContainer/VBox/ButtonContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Continue"

[node name="SettingsButton" type="Button" parent="CenterContainer/VBox/ButtonContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Settings"

[node name="VersionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 16
text = "v0.1.0"
horizontal_alignment = 1
